Feat: Add list all endpoint + remove dtos
