# src/dto/food_list_dto.rs
@@ -1,5 +1,0 @@
-use crate::dto::food_dto::FoodDTO;
-
-pub struct FoodListDTO {
-    pub(crate) foods: Vec<FoodDTO>
-}
