# src/dto/mod.rs
@@ -1,2 +1,0 @@
-pub mod food_dto;
-pub mod food_list_dto;
